--- a/src/components/checkout/card-field.astro
+++ b/src/components/checkout/card-field.astro
@@ -11,7 +11,7 @@ import RevolutCheckout, { type RevolutCheckoutCardField } from '@revolut/checkou
 import type { Address, CountryCode, Mode } from '@revolut/checkout/types/types'
 import { cardFieldComplete, checkoutOrderID, deliveryAvailable, guestTotalToPay, memberBillingAddress, memberEmail, memberFullName, memberTotalToPay, selectedCollectionPoint, signedIn, thisClientPaymentInProcess } from '@stores'
 import { wsSendMessage } from 'src/ws'
-import { revolutMode } from '@misc'
+import { PUBLIC_FM_CLIENT_WEBSHOP_REVOLUT_MODE } from 'astro:env/client'
 
 let cardField:RevolutCheckoutCardField
 
@@ -56,7 +56,7 @@ const showPaymentFailedModal = (msg:string) => {
 const mountCartField = async () => {
     const token = await getToken()
     if (token === '') return
-    const { createCardField } = await RevolutCheckout(token,revolutMode as Mode) // mode: 'prod' or 'sandbox'
+    const { createCardField } = await RevolutCheckout(token,PUBLIC_FM_CLIENT_WEBSHOP_REVOLUT_MODE as Mode) // mode: 'prod' or 'sandbox'
     cardField = createCardField({
         target:cardFieldElem,
         onStatusChange:({completed})=>cardFieldComplete.set(completed),
