--- a/src/components/checkout/guest/email-password.astro
+++ b/src/components/checkout/guest/email-password.astro
@@ -1,7 +1,9 @@
 ---
 import Checkbox from "@components/input-fields/checkbox"
 import TextInput from "@components/input-fields/text-input"
-import { acceptMembership } from "@misc/env-vars"
+import { PUBLIC_FM_ACCEPT_MEMBERSHIP } from 'astro:env/client'
+
+const acceptMembership = PUBLIC_FM_ACCEPT_MEMBERSHIP === 'true'
 
 const encodedPathname = encodeURIComponent(Astro.url.pathname)
 ---
