--- a/src/components/homepage/index.astro
+++ b/src/components/homepage/index.astro
@@ -105,7 +105,7 @@ const { productIDs = [], productObj, cartItemObj } = Astro.props as Props
     // image itself is 3361 x 2188
     // image w bg is 6500 x 2188
 
-    import { imageUrlPrefix } from "@misc";
+    import { PUBLIC_FM_PUBLIC_IMAGE_URL_PREFIX } from 'astro:env/client'
 
     interface IImageSize {
         w:number;
@@ -161,7 +161,7 @@ const { productIDs = [], productObj, cartItemObj } = Astro.props as Props
                     break
                 }
             }
-            const imageFilename = `${imageUrlPrefix}banner-${imageSizes[index].w}x${imageSizes[index].h}`
+            const imageFilename = `${PUBLIC_FM_PUBLIC_IMAGE_URL_PREFIX}banner-${imageSizes[index].w}x${imageSizes[index].h}`
             bannerContainer.style.backgroundImage = `image-set(${['avif','webp','jpg'].map(e=>`url(${imageFilename}.${e}) type('image/${e === 'jpg' ? 'jpeg' : e}')`)})`
         }
 
