--- a/src/components/product-page/image-vertical.astro
+++ b/src/components/product-page/image-vertical.astro
@@ -1,6 +1,5 @@
 ---
-// import { FM_PUBLIC_IMAGE_URL_PREFIX } from 'astro:env/client'
-import { imageUrlPrefix } from '@misc'
+import { PUBLIC_FM_PUBLIC_IMAGE_URL_PREFIX } from 'astro:env/client'
 import type { IProductImages } from "@components/catalogue-item/interfaces";
 
 type Props = IProductImages & {alt:string}
@@ -17,9 +16,9 @@ const { name, ext, alt } = Astro.props as Props
             ext
         ].map(e=>(
             e === ext ?
-            <img src={`${imageUrlPrefix}${name}${e}`} alt={alt} />
+            <img src={`${PUBLIC_FM_PUBLIC_IMAGE_URL_PREFIX}${name}${e}`} alt={alt} />
             :
-            <source srcset={`${imageUrlPrefix}${name}${e}`} />
+            <source srcset={`${PUBLIC_FM_PUBLIC_IMAGE_URL_PREFIX}${name}${e}`} />
         ))
     }
 </picture>
