--- a/src/pages/account/edit-address.astro
+++ b/src/pages/account/edit-address.astro
@@ -3,16 +3,15 @@ import { httpRequestHeader, sessionCookieOption, type ICountry, type IMdwRespons
 import Layout from '@components/layout/index.astro'
 import EditAddressForm from "@components/account-addresses/edit-address-form.astro";
 import { FM_CLIENT_WEBSHOP_API_URL, FM_IS_ONLINE } from 'astro:env/server'
-// import { FM_HEADER_CAROUSEL_OFF_COOKIE_KEY } from 'astro:env/client'
-import { headerCarouselOffKey } from '@misc'
-import { acceptMembership } from "@misc/env-vars";
+import { PUBLIC_FM_HEADER_CAROUSEL_OFF_COOKIE_KEY, PUBLIC_FM_ACCEPT_MEMBERSHIP } from 'astro:env/client'
 
 interface IApiResponse {
     address:IUserAddress;
     countries:ICountry[];
     noServiceCountryMap:INoServiceCountryMap;
-}
 
+}
+const acceptMembership = PUBLIC_FM_ACCEPT_MEMBERSHIP === 'true'
 if (!acceptMembership) return new Response(null,{status:404})
 
 const id = Astro.url.searchParams.get('id')
@@ -20,7 +19,7 @@ if (!id) return Astro.redirect('/account/addresses')
 
 const isOnline = FM_IS_ONLINE === 'true'
 const initialSessionID = Astro.cookies.get("sessionID")?.value || ""
-const headerCarouselOff = Astro.cookies.has(headerCarouselOffKey)
+const headerCarouselOff = Astro.cookies.has(PUBLIC_FM_HEADER_CAROUSEL_OFF_COOKIE_KEY)
 
 const resp = await fetch(`${ FM_CLIENT_WEBSHOP_API_URL }/webshop/account-add-update-address-page-init/${id}`,{
     headers:httpRequestHeader(true,'SSR',true,initialSessionID,Astro.clientAddress,!headerCarouselOff)
