--- a/src/pages/account/new-address.astro
+++ b/src/pages/account/new-address.astro
@@ -3,9 +3,7 @@ import EditAddressForm from '@components/account-addresses/edit-address-form.ast
 import Layout from '@components/layout/index.astro'
 import { httpRequestHeader, sessionCookieOption, type ICountry, type IMdwResponse, type INoServiceCountryMap, type IShoppingBagSidebarProp } from '@misc';
 import { FM_CLIENT_WEBSHOP_API_URL, FM_IS_ONLINE } from 'astro:env/server'
-// import { FM_HEADER_CAROUSEL_OFF_COOKIE_KEY } from 'astro:env/client'
-import { headerCarouselOffKey } from '@misc'
-import { acceptMembership } from '@misc/env-vars';
+import { PUBLIC_FM_HEADER_CAROUSEL_OFF_COOKIE_KEY, PUBLIC_FM_ACCEPT_MEMBERSHIP } from 'astro:env/client'
 
 interface IApiResponse {
     userAlreadyHasAddress:boolean;
@@ -13,11 +11,12 @@ interface IApiResponse {
     noServiceCountryMap:INoServiceCountryMap;
 }
 
+const acceptMembership = PUBLIC_FM_ACCEPT_MEMBERSHIP === 'true'
 if (!acceptMembership) return new Response(null,{status:404})
 
 const isOnline = FM_IS_ONLINE === 'true'
 const initialSessionID = Astro.cookies.get("sessionID")?.value || ""
-const headerCarouselOff = Astro.cookies.has(headerCarouselOffKey)
+const headerCarouselOff = Astro.cookies.has(PUBLIC_FM_HEADER_CAROUSEL_OFF_COOKIE_KEY)
 
 const resp = await fetch(`${ FM_CLIENT_WEBSHOP_API_URL }/webshop/account-add-update-address-page-init/0`,{
     headers:httpRequestHeader(true,'SSR',true,initialSessionID,Astro.clientAddress,!headerCarouselOff)
