--- a/src/pages/account/profile.astro
+++ b/src/pages/account/profile.astro
@@ -7,8 +7,7 @@ import EditorContainer from '@components/account-profile/editor-container.astro'
 import EditorPersonalInfo from '@components/account-profile/editor-personal-info.astro';
 import EditorPassword from '@components/account-profile/editor-password.astro';
 import { FM_CLIENT_WEBSHOP_API_URL, FM_IS_ONLINE } from 'astro:env/server'
-import { headerCarouselOffKey } from '@misc'
-import { acceptMembership } from '@misc/env-vars';
+import { PUBLIC_FM_HEADER_CAROUSEL_OFF_COOKIE_KEY, PUBLIC_FM_ACCEPT_MEMBERSHIP } from 'astro:env/client'
 
 interface IApiResponse {
     firstName:string;
@@ -18,11 +17,12 @@ interface IApiResponse {
     subscribed:boolean;
 }
 
+const acceptMembership = PUBLIC_FM_ACCEPT_MEMBERSHIP === 'true'
 if (!acceptMembership) return new Response(null,{status:404})
 
 const isOnline = FM_IS_ONLINE === 'true'
 const initialSessionID = Astro.cookies.get("sessionID")?.value || ""
-const headerCarouselOff = Astro.cookies.has(headerCarouselOffKey)
+const headerCarouselOff = Astro.cookies.has(PUBLIC_FM_HEADER_CAROUSEL_OFF_COOKIE_KEY)
 
 const resp = await fetch(`${ FM_CLIENT_WEBSHOP_API_URL }/webshop/account-profile-page-init`,{
     headers:httpRequestHeader(true,'SSR',true,initialSessionID,Astro.clientAddress,!headerCarouselOff)
