--- a/src/pages/sign-out.astro
+++ b/src/pages/sign-out.astro
@@ -1,6 +1,7 @@
 ---
-import { companyNameShort } from '@misc'
-import { acceptMembership } from '@misc/env-vars'
+import { PUBLIC_FM_COMPANY_NAME_SHORT, PUBLIC_FM_ACCEPT_MEMBERSHIP } from 'astro:env/client'
+
+const acceptMembership = PUBLIC_FM_ACCEPT_MEMBERSHIP === 'true'
 
 if (!acceptMembership) return new Response(null,{status:404})
 
@@ -10,7 +11,7 @@ Astro.cookies.delete('sessionID')
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Signing Out ... | {companyNameShort}</title>
+        <title>Signing Out ... | {PUBLIC_FM_COMPANY_NAME_SHORT}</title>
     </head>
     <body></body>
 </html>
