--- a/src/components/checkout/member/edit-address-form.astro
+++ b/src/components/checkout/member/edit-address-form.astro
@@ -125,6 +125,7 @@ const idPrefix = 'edit-address'
 <script>
 import { dispatchInternalEvent, httpRequestHeader, sessionLost, type IMemberEditAddressUpdateResponse, type IUserAddress } from "@misc";
 import { MEMBER_EDIT_ADDRESS_UPDATE, OPEN_EDIT_ADDRESS_MODAL, TEXT_INPUT_SET_NEW_VALUE } from "@misc/event-keys";
+import { FM_CLIENT_WEBSHOP_API_URL } from "astro:env/client";
 
 class CheckoutEditAddressForm extends HTMLElement {
     constructor(){
@@ -185,7 +186,7 @@ class CheckoutEditAddressForm extends HTMLElement {
             const countryID = countryIDElem.value
             const isDefault = !!isDefaultCheckbox && isDefaultCheckbox.checked
 
-            const resp = await fetch('/api/webshop/account-add-update-address',{
+            const resp = await fetch(`${FM_CLIENT_WEBSHOP_API_URL}/webshop/account-add-update-address`,{
                 method:"POST",
                 headers:httpRequestHeader(false,'client',false),
                 body:JSON.stringify({
