--- a/src/components/product-page/index.astro
+++ b/src/components/product-page/index.astro
@@ -63,6 +63,7 @@ import type { IProduct, IStockQuantity } from "@components/catalogue-item/interf
 import { catalogueItemsOnResize, dispatchInternalEvent, formatPrice, httpRequestHeader, sessionLost, showErrorModal } from "@misc"
 import { ADD_TO_BAG_FROM_CATALOGUE, CART_QTY_UPDATE, CART_UPDATE, PRODUCT_UPDATE } from "@misc/event-keys"
 import { selectedCollectionPoint, otherClientPaymentInProcess, shopNameMap } from "@stores"
+import { FM_CLIENT_WEBSHOP_API_URL } from "astro:env/client"
 
     const container = document.getElementById('product-container')
     const header = document.getElementsByTagName('header')[0]
@@ -179,7 +180,7 @@ import { selectedCollectionPoint, otherClientPaymentInProcess, shopNameMap } fro
 
                 if (qtyInCart + addQty <= qtyAvailable){
                     setLoading(true)
-                    const resp = await fetch('/api/webshop/product-add-qty',{
+                    const resp = await fetch(`${FM_CLIENT_WEBSHOP_API_URL}/webshop/product-add-qty`,{
                         method:"POST",
                         headers:httpRequestHeader(false,'client',true),
                         body:JSON.stringify({id,changeInQuantity:addQty,dateAdded:Date.now()})
@@ -290,7 +291,7 @@ import { selectedCollectionPoint, otherClientPaymentInProcess, shopNameMap } fro
             }
 
             const onOnline = async() => {
-                const resp = await fetch('/api/webshop/shop-page',{
+                const resp = await fetch(`${FM_CLIENT_WEBSHOP_API_URL}/webshop/shop-page`,{
                     method:"POST",
                     headers:httpRequestHeader(false,'client',false),
                     body:JSON.stringify({ids:[id,...relatedProductIDs]})
