--- a/src/components/account-addresses/address.astro
+++ b/src/components/account-addresses/address.astro
@@ -66,6 +66,7 @@ const { address: {
 
 <script>
 import { httpRequestHeader, sessionLost } from "@misc";
+import { FM_CLIENT_WEBSHOP_API_URL } from 'astro:env/client'
 
     class AddressListItem extends HTMLElement {
         constructor(){
@@ -80,7 +81,7 @@ import { httpRequestHeader, sessionLost } from "@misc";
             const toSignIn = () => window.location.assign(`/sign-in?rd=${encodeURIComponent('/account/addresses')}`)
 
             const setAsDefault = async () => {
-                const resp = await fetch(`/api/webshop/account-set-default-address/${addressID}`,{
+                const resp = await fetch(`${FM_CLIENT_WEBSHOP_API_URL}/webshop/account-set-default-address/${addressID}`,{
                     headers:httpRequestHeader(false,'client',false)
                 })
                 if (resp.status === 401) toSignIn()
@@ -89,7 +90,7 @@ import { httpRequestHeader, sessionLost } from "@misc";
             }
 
             const onDelete = async () => {
-                const resp = await fetch(`/api/webshop/account-delete-address/${addressID}`,{
+                const resp = await fetch(`${FM_CLIENT_WEBSHOP_API_URL}/webshop/account-delete-address/${addressID}`,{
                     headers:httpRequestHeader(false,'client',false)
                 })
                 if (resp.status === 401) toSignIn()
