--- a/src/components/account-profile/editor-password.astro
+++ b/src/components/account-profile/editor-password.astro
@@ -32,6 +32,7 @@ import SubmitBtn from "./submit-btn.astro";
 <script>
 import { dispatchInternalEvent, httpRequestHeader, sessionLost } from "@misc"
 import { TEXT_INPUT_SET_NEW_VALUE } from "@misc/event-keys"
+import { FM_CLIENT_WEBSHOP_API_URL } from "astro:env/client"
 
     const form = document.getElementById('form-password') as HTMLFormElement
     const errorMsgElem = form.getElementsByClassName('error-msg')[0] as HTMLDivElement
@@ -49,7 +50,7 @@ import { TEXT_INPUT_SET_NEW_VALUE } from "@misc/event-keys"
         clearPassword(currentPasswordElem)
         clearPassword(newPasswordElem)
 
-        const resp = await fetch('/api/webshop/account-profile-update-password',{
+        const resp = await fetch(`${FM_CLIENT_WEBSHOP_API_URL}/webshop/account-profile-update-password`,{
             method:"POST",
             headers:httpRequestHeader(false,'client',false),
             body:JSON.stringify({currentPassword,newPassword})
