--- a/src/components/contact/index.astro
+++ b/src/components/contact/index.astro
@@ -54,6 +54,7 @@ import Textarea from '@components/input-fields/textarea';
 
 <script>
     import { httpRequestHeader, sessionLost, setLoading } from "@misc"
+    import { FM_CLIENT_WEBSHOP_API_URL } from "astro:env/client"
 
     const form = document.getElementById('contact-form') as HTMLFormElement
     const errorMsg = document.getElementById('confact-form-error-msg') as HTMLParagraphElement
@@ -90,7 +91,7 @@ import Textarea from '@components/input-fields/textarea';
         setLoading(true)
         errorMsg.classList.add('hidden')
 
-        const resp = await fetch('/api/webshop/contact-form-enquiry',{
+        const resp = await fetch(`${FM_CLIENT_WEBSHOP_API_URL}/webshop/contact-form-enquiry`,{
             method:"POST",
             headers:httpRequestHeader(false,'client',true),
             body:JSON.stringify({
