--- a/src/components/layout/collection-point-on-qty-increase.astro
+++ b/src/components/layout/collection-point-on-qty-increase.astro
@@ -24,6 +24,7 @@ import type { IAddToBagResponse } from "@components/cart/interfaces"
 import { dispatchInternalEvent, httpRequestHeader, sessionLost, setLoading, showErrorModal } from "@misc"
 import { ADD_TO_BAG_FROM_CATALOGUE, CART_ITEM_QTY_BACK_TO_ORIGINAL, CART_QTY_UPDATE } from "@misc/event-keys"
 import { selectedCollectionPoint } from "@stores"
+import { FM_CLIENT_WEBSHOP_API_URL } from "astro:env/client";
 
     const isDesktop = window.matchMedia && matchMedia("(pointer:fine)").matches;
     const checkbox = document.getElementById("collection-point-on-qty-increase") as HTMLInputElement
@@ -42,7 +43,7 @@ import { selectedCollectionPoint } from "@stores"
             return
         }
 
-        const resp = await fetch('/api/webshop/product-add-qty-deselect-collection-point',{
+        const resp = await fetch(`${FM_CLIENT_WEBSHOP_API_URL}/webshop/product-add-qty-deselect-collection-point`,{
             method:"POST",
             headers:httpRequestHeader(false,'client',true),
             body:JSON.stringify({id:productID,changeInQuantity,dateAdded:isNaN(dt) ? 0 : dt})
