--- a/src/components/sign-in-form/index.astro
+++ b/src/components/sign-in-form/index.astro
@@ -43,6 +43,7 @@ const idPrefix="sign-in"
 import { dispatchInternalEvent, httpRequestHeader, sessionLost } from "@misc"
 import { TEXT_INPUT_SET_NEW_VALUE } from "@misc/event-keys"
 import { pageToken } from "@stores"
+import { FM_CLIENT_WEBSHOP_API_URL } from "astro:env/client"
 
     const signInForm = document.getElementById('sign-in') as HTMLFormElement
     const errorMsg = document.getElementById('sign-in-error-message') as HTMLParagraphElement
@@ -64,7 +65,7 @@ import { pageToken } from "@stores"
         passwordElem.value = ''
         dispatchInternalEvent(TEXT_INPUT_SET_NEW_VALUE,{id:passwordElem.id,value:''})
 
-        const resp = await fetch('/api/webshop/sign-in',{
+        const resp = await fetch(`${FM_CLIENT_WEBSHOP_API_URL}/webshop/sign-in`,{
             method:'POST',
             headers:httpRequestHeader(false,'client',false),
             body:JSON.stringify({email,password,privateDevice})
