--- a/src/components/sign-up-form/index.astro
+++ b/src/components/sign-up-form/index.astro
@@ -51,6 +51,7 @@ const isSignUpPage = Astro.url.pathname === '/sign-up'
 import { dispatchInternalEvent, httpRequestHeader, sessionLost } from "@misc"
 import { TEXT_INPUT_SET_NEW_VALUE } from "@misc/event-keys"
 import { pageToken } from "@stores"
+import { FM_CLIENT_WEBSHOP_API_URL } from "astro:env/client"
 
 class SignUpForm extends HTMLElement {
     constructor(){
@@ -76,7 +77,7 @@ class SignUpForm extends HTMLElement {
             passwordElem.value = ''
             dispatchInternalEvent(TEXT_INPUT_SET_NEW_VALUE,{id:passwordElem.id,value:''})
 
-            const resp = await fetch('/api/webshop/sign-up',{
+            const resp = await fetch(`${FM_CLIENT_WEBSHOP_API_URL}/webshop/sign-up`,{
                 method:'POST',
                 headers:httpRequestHeader(false,'client',false),
                 body:JSON.stringify({email,password,isNewsletterSubscribed})
