--- a/src/components/track-order/form.astro
+++ b/src/components/track-order/form.astro
@@ -40,6 +40,7 @@ const { fetchedOrder, orderID } = Astro.props as Props
 
 <script>
 import { httpRequestHeader, sessionLost } from "@misc"
+import { FM_CLIENT_WEBSHOP_API_URL } from "astro:env/client"
 
     const form = document.getElementById('track-order-form') as HTMLFormElement
     const fetchedOrder = !!(+form.dataset.fetchedorder)
@@ -73,7 +74,7 @@ import { httpRequestHeader, sessionLost } from "@misc"
             }
             const email = (form.elements.namedItem('email') as HTMLInputElement).value.trim()
 
-            const resp = await fetch('/api/webshop/track-order',{
+            const resp = await fetch(`${FM_CLIENT_WEBSHOP_API_URL}/webshop/track-order`,{
                 method:"POST",
                 headers:httpRequestHeader(false,'client',true),
                 body:JSON.stringify({email,orderID})
