--- a/src/pages/account/edit-address.astro
+++ b/src/pages/account/edit-address.astro
@@ -2,8 +2,8 @@
 import { httpRequestHeader, sessionCookieOption, type ICountry, type IMdwResponse, type INoServiceCountryMap, type IShoppingBagSidebarProp, type IUserAddress } from "@misc";
 import Layout from '@components/layout/index.astro'
 import EditAddressForm from "@components/account-addresses/edit-address-form.astro";
-import { FM_CLIENT_WEBSHOP_API_URL, FM_IS_ONLINE } from 'astro:env/server'
-import { PUBLIC_FM_HEADER_CAROUSEL_OFF_COOKIE_KEY, PUBLIC_FM_ACCEPT_MEMBERSHIP } from 'astro:env/client'
+import { FM_IS_ONLINE } from 'astro:env/server'
+import { PUBLIC_FM_HEADER_CAROUSEL_OFF_COOKIE_KEY, PUBLIC_FM_ACCEPT_MEMBERSHIP, FM_CLIENT_WEBSHOP_API_URL } from 'astro:env/client'
 
 interface IApiResponse {
     address:IUserAddress;
@@ -89,6 +89,7 @@ Astro.cookies.set("csrf_token",resp.headers.get("X-CSRF-TOKEN"),sessionCookieOpt
 
 <script>
 import { httpRequestHeader, sessionLost } from "@misc"
+import { FM_CLIENT_WEBSHOP_API_URL } from "astro:env/client"
 
     const form = document.getElementById('edit-address') as HTMLFormElement
     const errorMsg = document.getElementById('error-msg') as HTMLParagraphElement
@@ -108,7 +109,7 @@ import { httpRequestHeader, sessionLost } from "@misc"
         const isDefaultCheckbox = form.elements.namedItem('is-default') as HTMLInputElement
         const isDefault = !!isDefaultCheckbox && isDefaultCheckbox.checked
 
-        const resp = await fetch('/api/webshop/account-add-update-address',{
+        const resp = await fetch(`${FM_CLIENT_WEBSHOP_API_URL}/webshop/account-add-update-address`,{
             method:"POST",
             headers:httpRequestHeader(false,'client',false),
             body:JSON.stringify({id,firstName,lastName,line1,line2,city,stateProvince,postcode,countryID,isDefault})
