--- a/src/pages/sign-up.astro
+++ b/src/pages/sign-up.astro
@@ -2,8 +2,8 @@
 import Layout from '../components/layout/index.astro';
 import SignUpForm from '../components/sign-up-form/index.astro';
 import { httpRequestHeader, sessionCookieOption, type IMdwResponse, type IShoppingBagSidebarProp } from '@misc';
-import { FM_CLIENT_WEBSHOP_API_URL, FM_IS_ONLINE } from 'astro:env/server'
-import { PUBLIC_FM_HEADER_CAROUSEL_OFF_COOKIE_KEY, PUBLIC_FM_ACCEPT_MEMBERSHIP } from 'astro:env/client'
+import { FM_IS_ONLINE } from 'astro:env/server'
+import { PUBLIC_FM_HEADER_CAROUSEL_OFF_COOKIE_KEY, PUBLIC_FM_ACCEPT_MEMBERSHIP, FM_CLIENT_WEBSHOP_API_URL } from 'astro:env/client'
 
 const acceptMembership = PUBLIC_FM_ACCEPT_MEMBERSHIP === 'true'
 
