--- a/src/pages/terms/[slug].astro
+++ b/src/pages/terms/[slug].astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '@components/layout/index.astro'
-import { FM_CLIENT_WEBSHOP_API_URL, FM_IS_ONLINE } from 'astro:env/server'
+import { FM_IS_ONLINE } from 'astro:env/server'
 import { httpRequestHeader, sessionCookieOption, type IMdwResponse, type IShoppingBagSidebarProp } from '@misc'
 import { PUBLIC_FM_HEADER_CAROUSEL_OFF_COOKIE_KEY } from 'astro:env/client'
 import Terms from '@components/terms/index.astro'
