--- a/src/components/account-profile/editor-password.astro
+++ b/src/components/account-profile/editor-password.astro
@@ -50,7 +50,7 @@ import { FM_CLIENT_WEBSHOP_API_URL } from "astro:env/client"
         clearPassword(currentPasswordElem)
         clearPassword(newPasswordElem)
 
-        const resp = await fetch(`${FM_CLIENT_WEBSHOP_API_URL}/webshop/account-profile-update-password`,{
+        const resp = await fetch(`/api/webshop/account-profile-update-password`,{
             method:"POST",
             headers:httpRequestHeader(false,'client',false),
             body:JSON.stringify({currentPassword,newPassword})
