--- a/src/components/checkout/member/edit-address-form.astro
+++ b/src/components/checkout/member/edit-address-form.astro
@@ -186,7 +186,7 @@ class CheckoutEditAddressForm extends HTMLElement {
             const countryID = countryIDElem.value
             const isDefault = !!isDefaultCheckbox && isDefaultCheckbox.checked
 
-            const resp = await fetch(`${FM_CLIENT_WEBSHOP_API_URL}/webshop/account-add-update-address`,{
+            const resp = await fetch(`/api/webshop/account-add-update-address`,{
                 method:"POST",
                 headers:httpRequestHeader(false,'client',false),
                 body:JSON.stringify({
