--- a/src/pages/account/edit-address.astro
+++ b/src/pages/account/edit-address.astro
@@ -109,7 +109,7 @@ import { FM_CLIENT_WEBSHOP_API_URL } from "astro:env/client"
         const isDefaultCheckbox = form.elements.namedItem('is-default') as HTMLInputElement
         const isDefault = !!isDefaultCheckbox && isDefaultCheckbox.checked
 
-        const resp = await fetch(`/api/webshop/account-add-update-address`,{
+        const resp = await fetch(`${FM_CLIENT_WEBSHOP_API_URL}/webshop/account-add-update-address`,{
             method:"POST",
             headers:httpRequestHeader(false,'client',false),
             body:JSON.stringify({id,firstName,lastName,line1,line2,city,stateProvince,postcode,countryID,isDefault})
