--- a/src/components/checkout/member/new-address-form.astro
+++ b/src/components/checkout/member/new-address-form.astro
@@ -195,7 +195,7 @@ import { FM_CLIENT_WEBSHOP_API_URL } from "astro:env/client";
                 const countryID = countryIDElem.value
                 const isDefault = !!isDefaultCheckbox && isDefaultCheckbox.checked
 
-                const resp = await fetch(`/api/webshop/account-add-update-address`,{
+                const resp = await fetch(`${FM_CLIENT_WEBSHOP_API_URL}/webshop/account-add-update-address`,{
                     method:"POST",
                     headers:httpRequestHeader(false,'client',false),
                     body:JSON.stringify({
