--- a/src/pages/checkout.astro
+++ b/src/pages/checkout.astro
@@ -12,8 +12,7 @@ import Layout from '@components/layout/index.astro'
 import EmptyCart from '@components/checkout/empty-cart.astro'
 import CheckoutForm from '@components/checkout/index.astro'
 import CartLocked from '@components/checkout/cart-locked.astro';
-import { FM_IS_ONLINE } from 'astro:env/server'
-import { FM_CLIENT_WEBSHOP_API_URL } from 'astro:env/client'
+import { FM_IS_ONLINE, FM_CLIENT_WEBSHOP_API_URL } from 'astro:env/server'
 
 interface IApiResponse {
     addressMap:IUserAddressMap;
