--- a/src/pages/account/new-address.astro
+++ b/src/pages/account/new-address.astro
@@ -2,8 +2,8 @@
 import EditAddressForm from '@components/account-addresses/edit-address-form.astro';
 import Layout from '@components/layout/index.astro'
 import { httpRequestHeader, sessionCookieOption, type ICountry, type IMdwResponse, type INoServiceCountryMap, type IShoppingBagSidebarProp } from '@misc';
-import { FM_IS_ONLINE } from 'astro:env/server'
-import { PUBLIC_FM_HEADER_CAROUSEL_OFF_COOKIE_KEY, PUBLIC_FM_ACCEPT_MEMBERSHIP, FM_CLIENT_WEBSHOP_API_URL } from 'astro:env/client'
+import { FM_IS_ONLINE, FM_CLIENT_WEBSHOP_API_URL } from 'astro:env/server'
+import { PUBLIC_FM_HEADER_CAROUSEL_OFF_COOKIE_KEY, PUBLIC_FM_ACCEPT_MEMBERSHIP } from 'astro:env/client'
 
 interface IApiResponse {
     userAlreadyHasAddress:boolean;
@@ -83,7 +83,6 @@ Astro.cookies.set("csrf_token",resp.headers.get("X-CSRF-TOKEN"),sessionCookieOpt
 
 <script>
 import { httpRequestHeader, sessionLost } from "@misc"
-import { FM_CLIENT_WEBSHOP_API_URL } from "astro:env/client"
 
     const form = document.getElementById('new-address') as HTMLFormElement
     const errorMsg = document.getElementById('error-msg') as HTMLParagraphElement
