--- a/src/pages/jewellery-care-guide.astro
+++ b/src/pages/jewellery-care-guide.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from '@components/layout/index.astro'
-import { FM_IS_ONLINE } from 'astro:env/server'
-import { PUBLIC_FM_HEADER_CAROUSEL_OFF_COOKIE_KEY, FM_CLIENT_WEBSHOP_API_URL } from 'astro:env/client'
+import { FM_IS_ONLINE, FM_CLIENT_WEBSHOP_API_URL } from 'astro:env/server'
+import { PUBLIC_FM_HEADER_CAROUSEL_OFF_COOKIE_KEY } from 'astro:env/client'
 import { httpRequestHeader, sessionCookieOption, type IMdwResponse, type IShoppingBagSidebarProp } from '@misc'
 import Terms from '@components/terms/index.astro'
 
