--- a/src/pages/shop.astro
+++ b/src/pages/shop.astro
@@ -3,8 +3,8 @@ import ShopContent from '@components/shop/intro.astro'
 import Layout from '../components/layout/index.astro'
 import type { IProduct } from '@components/catalogue-item/interfaces';
 import { httpRequestHeader, sessionCookieOption, type IMdwResponse, type IShoppingBagSidebarProp } from '@misc';
-import { FM_IS_ONLINE } from 'astro:env/server'
-import { PUBLIC_FM_HEADER_CAROUSEL_OFF_COOKIE_KEY, FM_CLIENT_WEBSHOP_API_URL } from 'astro:env/client'
+import { FM_IS_ONLINE, FM_CLIENT_WEBSHOP_API_URL } from 'astro:env/server'
+import { PUBLIC_FM_HEADER_CAROUSEL_OFF_COOKIE_KEY } from 'astro:env/client'
 
 interface IApiResponse {
     productIDs:string[];
