--- a/src/pages/sign-in.astro
+++ b/src/pages/sign-in.astro
@@ -2,8 +2,8 @@
 import { httpRequestHeader, sessionCookieOption, whiteBtnClass, type IMdwResponse, type IShoppingBagSidebarProp } from '@misc';
 import Layout from '../components/layout/index.astro';
 import SignInForm from '../components/sign-in-form/index.astro';
-import { FM_IS_ONLINE } from 'astro:env/server'
-import { PUBLIC_FM_HEADER_CAROUSEL_OFF_COOKIE_KEY, PUBLIC_FM_ACCEPT_MEMBERSHIP, FM_CLIENT_WEBSHOP_API_URL } from 'astro:env/client'
+import { FM_IS_ONLINE, FM_CLIENT_WEBSHOP_API_URL } from 'astro:env/server'
+import { PUBLIC_FM_HEADER_CAROUSEL_OFF_COOKIE_KEY, PUBLIC_FM_ACCEPT_MEMBERSHIP } from 'astro:env/client'
 
 const acceptMembership = PUBLIC_FM_ACCEPT_MEMBERSHIP === 'true'
 
