--- a/src/components/checkout/index.astro
+++ b/src/components/checkout/index.astro
@@ -27,7 +27,6 @@ import UserAlreadyExists from "./guest/user-already-exists.astro";
 import GuestBillingAddress from "./guest/billing-address";
 import BillingAddressWrapper from "./billing-address-wrapper.astro";
 import MemberEmail from './member/email-address.astro'
-import LoadingSmall from "@components/layout/header/icons/loading-small.astro";
 import MemberShippingAddresses from "./member";
 import MemberBillingAddresses from "./member/billing-addresses";
 import OrderSummary from "./order-summary";
@@ -65,7 +64,6 @@ const {
     selectedAddressID,
     selectedDeliveryID,
     noServiceCountryMap,
-    total,
     email,
     shopAddressMap,
 } = Astro.props as Props
@@ -75,10 +73,10 @@ const hasPOS = !!Object.keys(shopAddressMap).length
 
 <div id="checkout-form-container" style="display:none;" class="max-w-96 lg:max-w-fit lg:flex lg:space-x-4 mx-auto py-4 space-y-4 lg:space-y-0" data-shop-count={Object.keys(shopAddressMap).length}>
     <div class="bg-white max-h-fit rounded-md px-3 lg:w-80 xl:w-96  w-full">
-        <div id="shopping-bag-loading" class="px-2 py-10">
+        <!-- <div id="shopping-bag-loading" class="px-2 py-10">
             <LoadingSmall className="animate-spin h-20 w-20 fill-gray-400 mx-auto mb-2" />
             <p class="text-center text-xs uppercase tracking-widest">Loading your shopping bag...</p>
-        </div>
+        </div> -->
         <CartList {...{itemsMap, productDetailsMap, isSignedIn, freeShippingLimit, cartCalculation, isCheckoutPage}} client:only="solid-js" />
     </div>
     <form id="checkout-form" class="space-y-4 lg:space-y-0 lg:flex lg:space-x-4">
