--- a/src/components/layout/index.astro
+++ b/src/components/layout/index.astro
@@ -334,6 +334,10 @@ const collapseSidebarsBeforeUnload = () => {
   const overlays = document.getElementsByClassName('overlay')
   const len = overlays.length
   for (let i=0; i<len; i++) overlays.item(i).classList.add('hidden')
+
+  document.getElementById("shopping-bag-sidebar-overlay")?.classList.add('hidden')
+  document.getElementById("user-sidebar-overlay")?.classList.add('hidden')
+  document.getElementById("menu-overlay")?.classList.add('hidden')
 }
 
 memberTotalToPay.set(+document.body.dataset.memberTotal)
